--- a/src/content/graphos/org/sso/okta-integration-guide.mdx
+++ b/src/content/graphos/org/sso/okta-integration-guide.mdx
@@ -83,7 +83,7 @@ Setup requires an Okta account with administrator privileges.
      width="500"
    />
 
-2. Copy and paste the contents of the **Metadata URL** text box into a text file:
+2. Copy and paste the contents of the **Metadata URL** text box into a text file.
 3. Send the **Metadata URL** to your Apollo contact. They will complete your SSO setup.
 
 ## Assign users in Okta
